[package]
name = "suuntaava_projekti"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
influxdb2 = { version = "0.5.2" }
hyper = { version = "0.14.32", features = ["full"] }
serde_json = "1.0.140"
chrono = "0.4.40"
futures = "0.3.31"
